--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Gonz&aacutelez Anaya # the website title (if blank, full name will be used instead)
+title: Javier Gonz&aacutelez Anaya # the website title (if blank, full name will be used instead)
 first_name: Javier
 middle_name: 
-last_name: Gonz&aacutelez Anaya
-email: you@example.com
+last_name: González Anaya
+email: javiergo@ucr.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
 icon: # the emoji used as the favicon
 url: # the base hostname & protocol for your site
@@ -119,8 +119,8 @@ github: [metadata]
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: González Anaya
+  first_name: [Javier]
 
   style: apa
   locale: en
@@ -151,7 +151,7 @@ enable_tooltips:            false  # enables automatic tooltip links generated
 enable_darkmode:            true   # enables switching between light/dark modes
 enable_navbar_social:       false  # enables displaying social links in the
                                    # navbar on the about page
-enable_project_categories:  true   # enables categorization of projects into
+enable_project_categories:  flase   # enables categorization of projects into
                                    # multiple categories
 
 # -----------------------------------------------------------------------------
