--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,18 +1,11 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"González":
+  - firstname: ["Jose", "Jose L", "José Luis", "José L", "J. L."]
+    url: https://math.ucr.edu/~joselg/
 
-"Podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"Gonzalez":
+  - firstname: ["Jose", "Jose L", "José Luis", "José L", "J. L."]
+    url: https://math.ucr.edu/~joselg/
 
-"Rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
-
-"Bach": 
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
-
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
+"Karu":
+  - firstname: ["Kalle", "K.", "K"]
+    url: https://www.math.ubc.ca/~karu/
