Finalized about page. Couldnt figure out how to remove the repeated name in about page. Should try another time

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Javier Gonz&aacutelez Anaya # the website title (if blank, full name will
 first_name: Javier
 middle_name: 
 last_name: González Anaya
-email: javiergo@ucr.edu
+email: javiergo@hmc.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
 icon: # the emoji used as the favicon
 url: # the base hostname & protocol for your site
