--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -25,6 +25,9 @@
 "Morales":
   - firstname: ["Alejandro H", "A.", "A"]
     url: https://sites.google.com/view/ahmorales/
-
+    
+"Morales":
+  - firstname: ["Dagan", "D.", "D"]
+    url: https://www.math.hmc.edu/~dk/
 
 
